# resdata-rust

./: .gitignore  Cargo.toml  README.md  notes.md  requirements.txt  test.sh
integration_testing/: integration_tests.ipynb  test.sh
src/: lib.rs  main.rs
src/api/: fetch.rs  ftl.rs  insert.rs  mod.rs  model.rs  models.rs  ping_test.rs  testing_insert.rs  testing_read.rs
src/handlers/: handlers.rs
src/middleware/: db.rs
src/model/: data_structs.rs  datamodels.rs  task.rs
src/models/: datastructs.rs  mod.rs  model.rs
src/repository/: mongo.rs
src/respository/: mod.rs
src/test/: test_1.rs
src/tests/: integration_test.rs  mod.rs
tests/: api_tests.rs  integration_test.rs  integration_tests.ipynb  test_db.rs  test_handlers.rs  test_model.rs
