[package]
name = "resdataRust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0" # Actix Web framework
serde_json = "1.0" # Serde JSON Support
serde = {version="1.0.188", features = ["derive"]}
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "3.1.0"
