[package]
name = "resdataRust"
version = "0.1.0"
edition = "2021"

# [dependencies]
# actix-web = "4.0" # Actix Web framework
# serde_json = "1.0" # Serde JSON Support
# serde = {version="1.0.188", features = ["derive"]}
# uuid = {version="^0.8", features=["v4"]}
# futures = "0.3.28"
# tokio = {version = "1.32.0", features = ["full"]}
# env_logger = "0.8"
# strum_macros ="^0.24"
# strum={ version = "^0.24", features=["derive"]}
# derive_more="^0.99"
# [dependencies.mongodb]
# version = "3.1.0"



[dependencies]
actix-web = "4"
mongodb = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
bson = "2.0"
