[package]
name = "testing_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
mongodb = "2.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
tokio = {version = "1", features = ["full"]}
futures = "0.3"

[lib]
name = "resdata_rust"
path = "src/lib.rs"
